[package]
name = "illist"
version = "0.0.1"
edition = '2018'
authors = ["Arav Singhal <singhal.arav@gmail.com>"]
description = "An indexable linked list implementation backed by a Vec"
repository = "https://github.com/eviltak/illist"
readme = "README.md"
keywords = ["collection", "linked-list", "list", "linked", "indexable", "index"]
license = "MIT"

[dependencies]

[dev-dependencies]
rand = "0.4.2"
